# smartpay

./: CMakeLists.txt  README.md  main.c
.github/workflows/: ci-cmake.yml
acceptance/: acceptance.sh
src/: CMakeLists.txt
src/api/: CMakeLists.txt  api.c  api.h
src/parser/: CMakeLists.txt  parser.c  parser.h
src/server/: CMakeLists.txt  server.c  server.h
src/store/: CMakeLists.txt  store.c  store.h
src/terminal/: CMakeLists.txt  terminal.c  terminal.h
test/: CMakeLists.txt
test/catch/: CMakeLists.txt
test/fakes/: CMakeLists.txt  parserFake.c  parserFake.h
test/tests/: CMakeLists.txt  apiTest.cpp  parserTest.cpp  storeTest.cpp
